--- a/styles.css
+++ b/styles.css
@@ -154,7 +154,11 @@ header{
 
   /* Seccion Servicios */
 
- .tarjetas-container {
+section#tarjetas-servicios {
+height: 90vh;
+}
+ 
+.tarjetas-container {
     padding: 20px 0;
     text-align: center;
     font-size: 25px!important; 
@@ -163,6 +167,7 @@ header{
   .card-cont {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 100px;
   }
 
   .card-cont h3 {
