--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@
     list-style: none;
     box-sizing: border-box;
     font-family: 'Asap', sans-serif;
-  
+    overflow: hidden;
 }
  /* Menu */
 header{
